[package]
name = "vielpork"
version = "0.1.2"
edition = "2024"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
rust-version = "1.85.0"
description = "A high-performance multi-threaded HTTP downloader with extensible reporting and resolution strategies."
keywords = ["downloader", "multi-threaded", "customization", "reqwest", "tokio"]
categories = ["asynchronous", "network-programming"]
license = "MIT"
documentation = "https://docs.rs/vielpork"
repository = "https://github.com/islatri/vielpork"

[dependencies]
reqwest = { version = "0.12.14", default-features = false, features = [
    "http2",
    "charset",
    "rustls-tls",
    "json",
    "stream"
] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14" }
tokio-stream = { version = "0.1.17" }
bytes = { version = "1.10.1" }
futures = { version = "0.3.31" }
async-trait = "0.1.87"

chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
indicatif = { version ="0.17.11" , optional = true}
base64-simd = "0.8.0"

percent-encoding = "2.3.1"
encoding_rs = "0.8.35"
regex = "1.11.1"
handlebars = "6.3.1"
rand = "0.9.0"
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"


[features]
default = ["tui","cli"]
full = ["tui","cli"]
tui = ["indicatif"]
cli = []
osu = []